--- a/final-proj/src/components/Card.css
+++ b/final-proj/src/components/Card.css
@@ -1,4 +1,7 @@
 .card {
     border-radius: 10px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   }
+
+.card:hover {
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+}
