--- a/final-proj/src/components/UserItem.css
+++ b/final-proj/src/components/UserItem.css
@@ -1,7 +1,9 @@
 .user-item{
-    background-color: rgb(73, 89, 101);
-    margin: 2rem auto;
-    width: 22rem;
+    background-color: #F5921F;
+    margin-top: .25rem;
+    margin-left: 0;
+    margin-right: 0;
+    width: 19rem;
     height: auto;
     max-width: 50%;
     display: grid;
@@ -18,6 +20,6 @@
 }
 
 .user-class-name{
-    color: rgb(112, 207, 233);
+    color: rgb(255, 253, 253);
     margin-left: 10%;
 }
