--- a/final-proj/src/App.css
+++ b/final-proj/src/App.css
@@ -1,9 +1,19 @@
 .App {
   text-align: center;
 }
-.navBar{
-  display: flex;
-  margin: 0;
+
+.StatHeader{
+  background-color: #D9D9D9;
+  width: 90%;
+  margin-top: 5rem;
+  margin-left: 5%;
+  margin-right: 5%;
+  display: grid;
+  grid-template-columns:.5fr 5fr 2fr 2fr 2fr 2fr .5fr;
+}
+
+h4{
+  text-align: center;
 }
 
 .App-logo {
