--- a/final-proj/src/components/RosterItem.css
+++ b/final-proj/src/components/RosterItem.css
@@ -10,8 +10,9 @@
 
   .Roster-class-img{
     padding: 1rem;
-    margin-left: 2.5rem;
-    
+    border-radius: 50%;
+    width: 5%;
+    height: auto;
   }
 
   .Roster-class-name{
