--- a/final-proj/src/components/StatHead.css
+++ b/final-proj/src/components/StatHead.css
@@ -5,7 +5,7 @@
     margin-left: 5%;
     margin-right: 5%;
     display: grid;
-    grid-template-columns:.5fr 5fr 2fr 2fr 2fr 2fr .5fr;
+    grid-template-columns:.5fr 2.5fr 2.5fr 2fr 2fr 2fr 2fr .5fr;
   }
   
 h4{
@@ -15,4 +15,8 @@ h4{
 .HeadName{
     text-align: left;
     margin-left: 5rem;
+}
+
+.numb{
+  margin-left: 1.5rem;
 }
