--- a/final-proj/src/components/create_account_page/CreateAccount.css
+++ b/final-proj/src/components/create_account_page/CreateAccount.css
@@ -1,5 +1,7 @@
 body {
     margin: 100px auto;
+    background-color: #FDEEDC;
+
 }
 
 .createaccount-page {
@@ -17,11 +19,15 @@ body {
     width: 50rem;
     max-width: 95%;
 
+    background-color: #D1512D;
+
 }
 
 .title {
     font-size: 40px;
-    font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+
+    /* background-color: #FDEEDC; */
 
 }
 
@@ -32,7 +38,7 @@ body {
     /* justify-content: space-between; */
     gap: 23px;
     align-items: center;
-    font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
 
 }
 
@@ -42,7 +48,11 @@ body {
     width: 450px;
     height: 100px;
     font-size: 40px;
-    font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+
+    background-color: #FDEEDC;
+    color: black;
+
 
 }
 
@@ -54,11 +64,13 @@ body {
     height: 100px;
     font-size: 40px;
     align-items: center;
-    font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+
+    background-color: #FDEEDC;
 
 }
 
-.next-button {
+/* .next-button {
     display: flex;
     width: 100px;
     justify-content: center;
@@ -70,19 +82,21 @@ body {
     font-size: 30px;
     font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
 
-}
+} */
 
 .create-account-button {
     display: flex;
     justify-content: center;
-    /* width: 100px; */
-    background-color: rgba(73, 89, 101, 0.581);
-    margin: 25px auto;
+ 
+    margin: 40px auto;
 
     height: 80px;
     width: 250px;
     align-items: center;
-    font-size: 30px;
-    font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    font-size: 20px;
+    font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+
+    background-color: #FDEEDC;
+    color: black;
 
 }
