--- a/final-proj/src/components/intro_page/Intro.css
+++ b/final-proj/src/components/intro_page/Intro.css
@@ -1,81 +1,96 @@
-/* padding: 1rem;
-    background-color: rgb(73, 89, 101);
-    margin: 2rem auto;
+body {
+    background-color: #FDEEDC;
+}
+
+
+/*
+#F5921F
+f0a249
+*/
+
+.intro-card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.intro-page {
+
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
+
+    padding: 1rem;
+    background-color: #D1512D;
+    margin: 10rem auto;
     width: 50rem;
-    max-width: 95%; */
+    max-width: 95%;
 
-    .intro-card {
-        display: flex;
-        flex-direction: row;
-        /* justify-content: center; */
-        align-items: center;
-        justify-content: center;
-    }
+}
 
-    .intro-page {
+.intro-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-family: "Geneva", " Lucida Console", "Courier New", monospace;
 
-        display: flex;
-        flex-direction: row;
+    color: #FDEEDC;
 
-        align-items: center;
-        justify-content: center;
+}
 
-        padding: 1rem;
-         background-color: rgb(73, 89, 101);
-         margin: 10rem auto;
-         width: 50rem;
-        max-width: 95%;
+.intro-slogan {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-family: "Geneva", " Lucida Console", "Courier New", monospace;
+     color: #FDEEDC;
 
-    }
+}
 
-    .intro-title {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+.intro-image {
+    display: block;
+    background-color: #FDEEDC;
+    flex-direction: row;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    width: 35%;
+    padding: 50px;
+}
 
-    }
+.intro-sign-in {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 220px;
+    padding: 50px 40px;
+    font-size: 30px;
+    font-family: "Geneva", " Lucida Console", "Courier New", monospace;
 
-    .intro-slogan {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    background-color: #FDEEDC;
+    color: black;
+    text-decoration: none;
+}
 
-    }
+.intro-create-account-link {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 250px;
+    padding: 40px 30px;
+    font-size: 20px;
 
-    .intro-image {
-        display: block;
-        background-color: rgba(0, 255, 255, 0.183);
-        flex-direction: row;
-        margin: auto;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-        width: 20%;
-        padding: 50px;
-    }
+    font-family: "Geneva", " Lucida Console", "Courier New", monospace;
+    text-decoration: none;
+    background-color: #FDEEDC;
+    color: black;
 
-    .intro-sign-in {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin: 40px auto;
-        padding: 50px 75px;
-        font-size: 30px;
-        font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
-    }
-
-    .intro-guest-link {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-
-        font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
-        text-decoration: none;
-        color: black;
-    }
+}
