--- a/final-proj/src/components/signin_page/Heading.css
+++ b/final-proj/src/components/signin_page/Heading.css
@@ -6,7 +6,8 @@
     justify-content: space-around;
 
     padding: 1rem;
-    background-color: rgb(47, 193, 33);
+    background-color: #FDEEDC;
+    /* color: #FDEEDC; */
     margin: 1rem auto;
     width: 35rem;
     max-width: 95%;
@@ -16,12 +17,11 @@
 .logo {
     display: flex;
     width: 50%;
-    /* justify-content: left; */
 }
 
 .heading-title {
     display: flex;
-    font-family: "Monaco" , " Lucida Console", "Courier New", monospace;
+    font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
     justify-content: center;
     margin: auto ;
 }
