--- a/final-proj/src/components/signin_page/Heading.css
+++ b/final-proj/src/components/signin_page/Heading.css
@@ -16,7 +16,9 @@
 
 .logo {
     display: flex;
-    width: 50%;
+    width: 50% !important;
+    /* width: 40px;
+    height: 40px; */
 }
 
 .heading-title {
