--- a/final-proj/src/Components/home_page/NavBar.css
+++ b/final-proj/src/Components/home_page/NavBar.css
@@ -7,8 +7,12 @@
 }
 
 .logo{
-    width: auto;
-    height: auto;
+    /* width: auto;
+    height: auto; */
+
+    width: 25% !important;
+    /* height:  !important; */
+
     margin: 0;
     padding: 0;
 }
