More style changes to bring it in line with the  figma

--- a/final-proj/src/Components/home_page/NavBar.css
+++ b/final-proj/src/Components/home_page/NavBar.css
@@ -4,8 +4,8 @@
     margin:0;
 }
 .curve{
-    background-color: #DB7D48;;
-    width: 5%;
+    background-color: #DB7D48;
+    width: 10%;
     height: 5rem;
     border-bottom-left-radius: 100%;
 
