--- a/final-proj/src/Components/home_page/StatHead.css
+++ b/final-proj/src/Components/home_page/StatHead.css
@@ -1,11 +1,10 @@
 .StatHeader{
-    background-color: #D9D9D9;
-    width: 90%;
+    background-color: white;
+    width: 100%;
     margin-top: 5rem;
     margin-left: 5%;
     margin-right: 5%;
-    display: grid;
-    grid-template-columns:.5fr 2.5fr 2.5fr 2fr 2fr 2fr 2fr .5fr;
+    display: flex;
   }
   
 h4{
@@ -15,6 +14,32 @@ h4{
 .HeadName{
     text-align: left;
     margin-left: 5rem;
+}
+
+.cont{
+  background-color: #D9D9D9;
+  width: 85%;
+  display: grid;
+  grid-template-columns: 2.5fr 2.5fr 1.8fr 2fr 1fr 3fr;
+}
+
+.ag{
+  margin-left:.8rem;
+}
+
+.sch{
+  margin-left: 5rem;
+}
+
+.curveR{
+  width: 2.5%;
+  background-color: #D9D9D9;
+  border-top-left-radius: 100%;
+}
+.curveL{
+  width: 2.5%;
+  background-color: #D9D9D9;
+  border-top-right-radius: 100%;
 }
 
 .numb{
