db connection,axios connection, fixed bugs...

--- a/final-proj/src/Components/home_page/HomePage.css
+++ b/final-proj/src/Components/home_page/HomePage.css
@@ -6,3 +6,18 @@ body{
     margin:0;
     padding:0;
 }
+
+
+.formsWrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  
+.PlayerForm {
+    margin-bottom: 20px;
+  }
+  
+.EditPlayer {
+    margin-top: 2000px;
+  }
+  
