--- a/final-proj/src/components/signin_page/SignIn.css
+++ b/final-proj/src/components/signin_page/SignIn.css
@@ -1,7 +1,6 @@
     body {
         margin: 100px auto;
         background-color: #FDEEDC;
-
     }
 
     .signin-page {
@@ -19,43 +18,33 @@
         width: 50rem;
         max-width: 95%;
         background-color: #D1512D;
-
-
     }
 
     .title {
         font-size: 40px;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
-        /* background-color: #FDEEDC; */
-
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
     }
 
     .user-input-form {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        /* justify-content: space-between; */
         gap: 23px;
         align-items: center;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
-            /* background-color: #FDEEDC; */
-
-
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
     }
-    
+
     .username {
         display: flex;
         justify-content: center;
         width: 450px;
         height: 100px;
         font-size: 40px;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
         background-color: #FDEEDC;
         border: #FDEEDC;
-
-
     }
-    
+
     .password {
         display: flex;
         justify-content: center;
@@ -64,7 +53,7 @@
         height: 100px;
         font-size: 40px;
         align-items: center;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
         background-color: #FDEEDC;
         border: #FDEEDC;
 
@@ -81,7 +70,7 @@
         width: 250px;
         align-items: center;
         font-size: 30px;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
 
         background-color: #FDEEDC;
         color: black;
@@ -99,7 +88,7 @@
         width: 250px;
         align-items: center;
         font-size: 30px;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
 
         background-color: #FDEEDC;
         color: black;
@@ -111,10 +100,16 @@
     .app-button {
         height: 80px;
         width: 250px;
-        font-family: "Geneva" , " Lucida Console", "Courier New", monospace;
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
         background-color: #FDEEDC;
         color: black;
         border: #FDEEDC;
         text-decoration: none;
-        margin:1rem;
+        margin: 1rem;
+    }
+
+    .error-message {
+        font-family: "Geneva", " Lucida Console", "Courier New", monospace;
+        font-size: 150%;
+        color: #FDEEDC;
     }
