--- a/final-proj/src/Components/home_page/UserItem.css
+++ b/final-proj/src/Components/home_page/UserItem.css
@@ -4,19 +4,37 @@
     margin-left: 10rem;
     margin-right: .5rem;
     width: 10rem;
+    /* width:auto; */
     height: auto;
     max-width: 50%;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+    display: flex;
+    /* grid-template-columns: 1fr 3fr; */
+    justify-content: center;
+    text-align: center;
+    font-size: 150%;
+    flex-direction: row;
+
+    /* display: block; */
+
   }
 .uWrap{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 }
 .log-out{
+    display: flex;
+    flex-direction: row;
+
+    /* display: block; */
+    color: antiquewhite;
+    text-decoration: none;
+    font-size: 100%;
     text-align: center;
-    margin-top: 0;
-    margin-bottom: .4rem;
+    /* margin-top: 0;
+    margin-bottom: .4rem; */
+    margin: auto;
+    font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 .user-class-img{
     padding-top: .5rem;
