--- a/final-proj/src/Components/home_page/EditPlayer.css
+++ b/final-proj/src/Components/home_page/EditPlayer.css
@@ -1,7 +1,9 @@
 .edit-form {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin-left: 20px;
+  background-color: #F5F5F5;
+  width: 25%;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  margin-left: 35%;
+  position: absolute;
   }
   
   .edit-form h2 {
@@ -38,7 +40,7 @@
   }
   
   .edit-form button[type="button"] {
-    background-color: #008CBA;
+    background-color: #DB7D48;
     color: #fff;
     border: none;
     padding: 10px 20px;
